# runai

./: README.md  pyproject.toml
runai/: cli.py  core.py
runai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
