[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "runai"
version = "0.1.0"
description = "Run natural language like code"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "openai>=1.0.0",
]

[project.scripts]
runai = "runai.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["runai*"]
